--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
+
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>WHOMARS</title>
+  <meta charset="UTF-8">
+  <title>WHOMARS - Memecoin Espacial</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #000;
+      color: #0f0;
+      text-align: center;
+      padding: 50px;
+    }
+    img {
+      max-width: 200px;
+      margin: 20px auto;
+    }
+    .botao {
+      background: #0f0;
+      color: #000;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 10px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    .botao:hover {
+      background: #fff;
+      color: #000;
+    }
+  </style>
 </head>
-<body style="background:black; color:white; text-align:center; padding:2rem;">
-  <h1>WHOMARS</h1>
-  <p>A zoeira vai mais longe que a NASA</p>
+<body>
+  <h1>WHOMARS: Corrida Espacial dos Memes</h1>
+  <p>Compre <strong>100.000 WHM</strong> e desbloqueie figurinhas secretas da Rússia, China, EUA, Brasil e Japão!</p>
+  <img src="https://media.tenor.com/NOYF3f82b_gAAAAC/loading-buffering.gif" alt="Meme Foguete">
+  <br>
+  <button class="botao" onclick="alert('Figurinhas liberadas em breve!')">Quero minhas figurinhas!</button>
+  <p style="margin-top:40px;">Powered by zoeira internacional</p>
 </body>
-</html>
+</html>de 
