--- a/index.html
+++ b/index.html
@@ -1,42 +1,65 @@
 
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html><html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>WHOMARS - Memecoin Espacial</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WHOMARS - Corrida Espacial a Júpiter</title>
   <style>
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
       background: #000;
-      color: #0f0;
+      color: #fff;
       text-align: center;
-      padding: 50px;
     }
-    img {
-      max-width: 200px;
-      margin: 20px auto;
+    header {
+      background: #111;
+      padding: 20px;
     }
-    .botao {
-      background: #0f0;
-      color: #000;
+    h1 {
+      font-size: 2.5rem;
+    }
+    .token-info {
+      margin-top: 30px;
+      font-size: 1.2rem;
+    }
+    .banner {
+      width: 100%;
+      height: auto;
+      max-height: 400px;
+      object-fit: cover;
+      margin-top: 20px;
+    }
+    .buy-button {
+      display: inline-block;
+      margin-top: 30px;
       padding: 15px 30px;
+      font-size: 1.2rem;
+      color: #fff;
+      background: #e60000;
       border: none;
       border-radius: 10px;
-      font-size: 18px;
-      cursor: pointer;
+      text-decoration: none;
     }
-    .botao:hover {
-      background: #fff;
-      color: #000;
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      background: #111;
     }
   </style>
 </head>
 <body>
-  <h1>WHOMARS: Corrida Espacial dos Memes</h1>
-  <p>Compre <strong>100.000 WHM</strong> e desbloqueie figurinhas secretas da Rússia, China, EUA, Brasil e Japão!</p>
-  <img src="https://media.tenor.com/NOYF3f82b_gAAAAC/loading-buffering.gif" alt="Meme Foguete">
-  <br>
-  <button class="botao" onclick="alert('Figurinhas liberadas em breve!')">Quero minhas figurinhas!</button>
-  <p style="margin-top:40px;">Powered by zoeira internacional</p>
+  <header>
+    <h1>WHOMARS (WHM)</h1>
+    <p>A cripto da corrida espacial a Júpiter!</p>
+  </header>  <img class="banner" src="https://i.imgur.com/6N3u6k3.jpg" alt="Banner WHOMARS com foguetes" />  <section class="token-info">
+    <p><strong>Contrato:</strong> 0x0951BD6B6310175EdC9508F3A5A24Ee55dc2c609</p>
+    <p><strong>Oferta total:</strong> 100.000.000.000 WHM</p>
+    <p><strong>Países na disputa:</strong> Brasil, China, Rússia, Japão, EUA!</p>
+    <p><strong>Descrição:</strong> Uma cripto nonsense, meme, e interestelar. Porque levar a vida a sério não leva a Júpiter!</p>
+    <a class="buy-button" href="https://pancakeswap.finance" target="_blank">Comprar WHM</a>
+  </section>  <footer>
+    <p>&copy; 2025 WHOMARS - Todos os direitos reservados.</p>
+  </footer>
 </body>
-</html>de 
+</html>
