--- a/index.html
+++ b/index.html
@@ -1,65 +1,89 @@
-
-<!DOCTYPE html><html lang="pt-br">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WHOMARS - Corrida Espacial a Júpiter</title>
+  <title>WHOMARS - Corrida Espacial do Meme</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #000;
-      color: #fff;
+      background-color: #000;
+      color: #0f0;
       text-align: center;
     }
     header {
-      background: #111;
-      padding: 20px;
+      padding: 3rem;
+      background-image: url('https://i.imgur.com/kq6Zk7N.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
     }
-    h1 {
-      font-size: 2.5rem;
+    header h1 {
+      font-size: 3rem;
+      text-shadow: 2px 2px #000;
     }
-    .token-info {
-      margin-top: 30px;
+    .button {
+      background: #0f0;
+      color: #000;
+      padding: 1rem 2rem;
       font-size: 1.2rem;
-    }
-    .banner {
-      width: 100%;
-      height: auto;
-      max-height: 400px;
-      object-fit: cover;
-      margin-top: 20px;
-    }
-    .buy-button {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 15px 30px;
-      font-size: 1.2rem;
-      color: #fff;
-      background: #e60000;
       border: none;
       border-radius: 10px;
+      margin-top: 1rem;
+      cursor: pointer;
       text-decoration: none;
     }
+    section {
+      padding: 3rem 1rem;
+    }
+    .memes {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+    .memes img {
+      width: 250px;
+      border-radius: 10px;
+      border: 2px solid #0f0;
+    }
     footer {
-      margin-top: 50px;
-      padding: 20px;
       background: #111;
+      padding: 2rem;
+      font-size: 0.9rem;
+      color: #777;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>WHOMARS (WHM)</h1>
-    <p>A cripto da corrida espacial a Júpiter!</p>
-  </header>  <img class="banner" src="https://i.imgur.com/6N3u6k3.jpg" alt="Banner WHOMARS com foguetes" />  <section class="token-info">
+    <h1>WHOMARS</h1>
+    <p>A memecoin da Corrida Espacial rumo a Júpiter</p>
+    <a class="button" href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee55dc2c609" target="_blank">Comprar 100.000 WHM</a>
+  </header>  <section>
+    <h2>Figurinhas e Memes Exclusivos</h2>
+    <p>Comprou 100.000 WHM? Bem-vindo à galeria dos memes intergalácticos!</p>
+    <div class="memes">
+      <img src="https://i.imgur.com/EFh8Us1.jpeg" alt="Rússia" />
+      <img src="https://i.imgur.com/YF1WUlx.jpeg" alt="China" />
+      <img src="https://i.imgur.com/UJp0uXr.jpeg" alt="Brasil" />
+      <img src="https://i.imgur.com/HJq6FtP.jpeg" alt="EUA" />
+    </div>
+  </section>  <section>
+    <h2>Tokenomics</h2>
+    <p><strong>Nome:</strong> WHOMARS (WHM)</p>
+    <p><strong>Total:</strong> 100.000.000.000 WHM</p>
+    <p><strong>Preço inicial:</strong> US$ 0,01 por token</p>
+    <p><strong>Rede:</strong> Binance Smart Chain</p>
     <p><strong>Contrato:</strong> 0x0951BD6B6310175EdC9508F3A5A24Ee55dc2c609</p>
-    <p><strong>Oferta total:</strong> 100.000.000.000 WHM</p>
-    <p><strong>Países na disputa:</strong> Brasil, China, Rússia, Japão, EUA!</p>
-    <p><strong>Descrição:</strong> Uma cripto nonsense, meme, e interestelar. Porque levar a vida a sério não leva a Júpiter!</p>
-    <a class="buy-button" href="https://pancakeswap.finance" target="_blank">Comprar WHM</a>
+  </section>  <section>
+    <h2>Por que WHOMARS?</h2>
+    <p>Enquanto os outros vão pra Lua, nós vamos pra Júpiter com memes, figurinhas e zoeira sem limite.</p>
+    <p>Chega de promessas de utilidade — aqui a utilidade é rir, comprar, e se divertir com os países mais irreverentes do planeta.</p>
   </section>  <footer>
-    <p>&copy; 2025 WHOMARS - Todos os direitos reservados.</p>
+    <p>Siga o movimento WHOMARS:</p>
+    <p>Instagram | Facebook | Kwai</p>
+    <p>Projeto de humor com liberdade criativa total. Não é recomendação financeira. WHOMARS é zoeira de outro planeta.</p>
   </footer>
 </body>
 </html>
