--- a/index.html
+++ b/index.html
@@ -1,89 +1,75 @@
-<!DOCTYPE html><html lang="pt-BR">
+ <!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WHOMARS - Corrida Espacial do Meme</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WHOMARS (WHM)</title>
   <style>
     body {
-      margin: 0;
+      background-color: #111;
+      color: white;
       font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #0f0;
+      margin: 0;
+      padding: 0;
       text-align: center;
     }
     header {
-      padding: 3rem;
-      background-image: url('https://i.imgur.com/kq6Zk7N.jpg');
-      background-size: cover;
-      background-position: center;
-      color: white;
-    }
-    header h1 {
-      font-size: 3rem;
-      text-shadow: 2px 2px #000;
-    }
-    .button {
-      background: #0f0;
-      color: #000;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      border: none;
-      border-radius: 10px;
-      margin-top: 1rem;
-      cursor: pointer;
-      text-decoration: none;
-    }
-    section {
-      padding: 3rem 1rem;
-    }
-    .memes {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-    }
-    .memes img {
-      width: 250px;
-      border-radius: 10px;
-      border: 2px solid #0f0;
-    }
-    footer {
-      background: #111;
+      background-color: #000;
       padding: 2rem;
-      font-size: 0.9rem;
-      color: #777;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.2rem;
+      margin: 0.5rem 0;
+    }
+    .imagem {
+      margin: 2rem auto;
+      max-width: 90%;
+    }
+    img {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 10px;
+    }
+    .info {
+      padding: 1rem;
+    }
+    .botao {
+      display: inline-block;
+      background-color: #e53935;
+      color: white;
+      padding: 1rem 2rem;
+      margin: 2rem 0;
+      text-decoration: none;
+      font-size: 1.2rem;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>WHOMARS</h1>
-    <p>A memecoin da Corrida Espacial rumo a Júpiter</p>
-    <a class="button" href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee55dc2c609" target="_blank">Comprar 100.000 WHM</a>
-  </header>  <section>
-    <h2>Figurinhas e Memes Exclusivos</h2>
-    <p>Comprou 100.000 WHM? Bem-vindo à galeria dos memes intergalácticos!</p>
-    <div class="memes">
-      <img src="https://i.imgur.com/EFh8Us1.jpeg" alt="Rússia" />
-      <img src="https://i.imgur.com/YF1WUlx.jpeg" alt="China" />
-      <img src="https://i.imgur.com/UJp0uXr.jpeg" alt="Brasil" />
-      <img src="https://i.imgur.com/HJq6FtP.jpeg" alt="EUA" />
-    </div>
-  </section>  <section>
-    <h2>Tokenomics</h2>
-    <p><strong>Nome:</strong> WHOMARS (WHM)</p>
-    <p><strong>Total:</strong> 100.000.000.000 WHM</p>
-    <p><strong>Preço inicial:</strong> US$ 0,01 por token</p>
-    <p><strong>Rede:</strong> Binance Smart Chain</p>
+    <h1>WHOMARS (WHM)</h1>
+    <p>A cripto da corrida espacial a Júpiter!</p>
+  </header>
+
+  <div class="imagem">
+    <img src="https://i.imgur.com/6Mm0a1L.png" alt="Corrida espacial antiamericana"/>
+  </div>
+
+  <div class="imagem">
+    <img src="https://i.imgur.com/G07fUIz.png" alt="Quem chega primeiro a Marte"/>
+  </div>
+
+  <div class="info">
     <p><strong>Contrato:</strong> 0x0951BD6B6310175EdC9508F3A5A24Ee55dc2c609</p>
-  </section>  <section>
-    <h2>Por que WHOMARS?</h2>
-    <p>Enquanto os outros vão pra Lua, nós vamos pra Júpiter com memes, figurinhas e zoeira sem limite.</p>
-    <p>Chega de promessas de utilidade — aqui a utilidade é rir, comprar, e se divertir com os países mais irreverentes do planeta.</p>
-  </section>  <footer>
-    <p>Siga o movimento WHOMARS:</p>
-    <p>Instagram | Facebook | Kwai</p>
-    <p>Projeto de humor com liberdade criativa total. Não é recomendação financeira. WHOMARS é zoeira de outro planeta.</p>
-  </footer>
+    <p><strong>Fornecimento total:</strong> 100.000.000.000 WHM</p>
+    <p><strong>Países na disputa:</strong> Brasil, China, Rússia, Japão, EUA!</p>
+    <p><strong>Descrição:</strong> Uma cripto nonsense, meme, e interestelar. Porque levar a vida a sério não leva a Júpiter!</p>
+
+    <a class="botao" href="#">Comprar WHM</a>
+  </div>
 </body>
 </html>
