--- a/index.html
+++ b/index.html
@@ -1,61 +1,82 @@
  <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WHOMARS (WHM)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WHOMARS Token</title>
   <style>
     body {
+      margin: 0;
       background-color: #111;
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 20px;
     }
     .banner {
-      max-width: 100%;
+      width: 100%;
+      max-width: 800px;
       margin: 20px auto;
+      display: block;
+      border-radius: 12px;
     }
-    .container {
-      background-color: #000;
-      padding: 20px;
-      border-radius: 10px;
+    .section {
+      margin: 20px;
+      padding: 10px;
     }
-    .btn {
-      background-color: #e74c3c;
+    .button {
+      background-color: #e63946;
       color: white;
       padding: 15px 30px;
-      text-decoration: none;
-      border-radius: 5px;
+      border: none;
       font-size: 18px;
-      display: inline-block;
+      border-radius: 8px;
+      cursor: pointer;
       margin-top: 20px;
     }
-    .btn:hover {
-      background-color: #c0392b;
+    .button:hover {
+      background-color: #ff4d4d;
     }
-    .destaque {
-      font-weight: bold;
+    .info {
+      background: #222;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 800px;
+    }
+    .footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>WHOMARS (WHM)</h1>
-    <p>A cripto da corrida espacial a Júpiter!</p>
 
-    <!-- Imagens -->
-    <img class="banner" src="https://i.imgur.com/gh3Pmb8.png" alt="Banner WHOMARS 1" />
-    <img class="banner" src="https://i.imgur.com/BKq4O3I.png" alt="Banner WHOMARS 2" />
+  <img class="banner" src="https://i.imgur.com/x0Uc6dB.png" alt="WHOMARS Rocket Banner">
 
-    <!-- Informações -->
-    <p><span class="destaque">Contrato:</span><br>0x0951BD6B6310175EdC9508F3A5A24Ee55dc2c609</p>
-    <p><span class="destaque">Fornecimento total:</span> 100.000.000.000 WHM</p>
-    <p><span class="destaque">Países na disputa:</span> Brasil, China, Rússia, Japão, EUA!</p>
-    <p><span class="destaque">Descrição:</span> Uma cripto nonsense, meme, e interestelar. Porque levar a vida a sério não leva a Júpiter!</p>
+  <div class="info">
+    <h2>Contrato:</h2>
+    <p>0x0951BD6B6310175EdC9508F3A5A24Ee5...</p>
 
-    <!-- Botão de compra -->
-    <a class="btn" href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee55dc2c609" target="_blank">Comprar WHM</a>
+    <h3>Fornecimento total:</h3>
+    <p>100.000.000.000 WHM</p>
+
+    <h3>Países na disputa:</h3>
+    <p>Brasil, China, Rússia, Japão, EUA!</p>
+
+    <h3>Descrição:</h3>
+    <p>Uma cripto nonsense, meme, e interestelar. Porque levar a vida a sério não leva a Júpiter!</p>
+
+    <a href="https://bscscan.com/token/0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank">
+      <button class="button">Comprar WHM</button>
+    </a>
   </div>
+
+  <img class="banner" src="https://i.imgur.com/jJzOLOt.png" alt="Quem chega primeiro à Marte?">
+
+  <div class="footer">
+    © 2025 WHOMARS — To the memeverse!
+  </div>
+
 </body>
 </html>
