--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 </head>
 <body>
 
-  <img class="banner" src="https://i.imgur.com/x0Uc6dB.png" alt="WHOMARS Rocket Banner">
+  <!-- Banner Principal -->
+  <img class="banner" src="https://i.ibb.co/nMsPSRY/whomars-rocket-launch.png" alt="WHOMARS Rocket Banner">
 
+  <!-- Informações do Token -->
   <div class="info">
     <h2>Contrato:</h2>
     <p>0x0951BD6B6310175EdC9508F3A5A24Ee5</p>
@@ -63,13 +65,16 @@
     <h3>Descrição:</h3>
     <p>Uma cripto nonsense, meme, e interestelar. Porque levar a vida a sério não leva a Júpiter!</p>
 
-    <a href="https://bscscan.com/token/0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank">
-      <button class="button">Comprar WHM</button>
+    <!-- Botão direto para PancakeSwap -->
+    <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank">
+      <button class="button">Comprar WHM via PancakeSwap</button>
     </a>
   </div>
 
-  <img class="banner" src="https://i.imgur.com/jJzOLOt.png" alt="Quem chega primeiro à Marte?">
+  <!-- Imagem da corrida à Marte -->
+  <img class="banner" src="https://i.ibb.co/ZGrP2CY/quem-chega-primeiro.png" alt="Quem chega primeiro à Marte?">
 
+  <!-- Rodapé -->
   <div class="footer">
     © 2025 WHOMARS — To the memeverse!
   </div>
