--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
       border-radius: 12px;
     }
     .button {
-      background-color: #e63946;
+      background-color: #00b894;
       color: white;
       padding: 15px 30px;
       border: none;
-      font-size: 18px;
-      border-radius: 8px;
+      font-size: 20px;
+      border-radius: 10px;
       cursor: pointer;
-      margin-top: 20px;
+      margin-top: 30px;
+      box-shadow: 0 0 10px #00b894;
+      transition: all 0.3s ease;
     }
     .button:hover {
-      background-color: #ff4d4d;
+      background-color: #00e6b8;
+      box-shadow: 0 0 15px #00e6b8;
     }
     .info {
       background: #222;
       border-radius: 10px;
-      padding: 20px;
+      padding: 30px 20px;
       margin: 20px auto;
       max-width: 800px;
     }
@@ -53,6 +56,8 @@
 
   <!-- Informações do Token -->
   <div class="info">
+    <h1>WHOMARS - A Cripto Nonsense Interplanetária</h1>
+
     <h2>Contrato:</h2>
     <p>0x0951BD6B6310175EdC9508F3A5A24Ee5</p>
 
@@ -60,24 +65,8 @@
     <p>100.000.000.000 WHM</p>
 
     <h3>Países na disputa:</h3>
-    <p>Brasil, China, Rússia, Japão, EUA!</p>
+    <p>Brasil, China, Rússia, Japão, EUA</p>
 
     <h3>Descrição:</h3>
-    <p>Uma cripto nonsense, meme, e interestelar. Porque levar a vida a sério não leva a Júpiter!</p>
-
-    <!-- Botão direto para PancakeSwap -->
-    <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank">
-      <button class="button">Comprar WHM via PancakeSwap</button>
-    </a>
-  </div>
-
-  <!-- Imagem da corrida à Marte -->
-  <img class="banner" src="https://i.ibb.co/ZGrP2CY/quem-chega-primeiro.png" alt="Quem chega primeiro à Marte?">
-
-  <!-- Rodapé -->
-  <div class="footer">
-    © 2025 WHOMARS — To the memeverse!
-  </div>
-
-</body>
-</html>
+    <p>
+      WHOMARS
