--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
 </head>
 <body>
 
-  <!-- Banner Principal -->
+  <!-- Banner -->
   <img class="banner" src="https://i.ibb.co/nMsPSRY/whomars-rocket-launch.png" alt="WHOMARS Rocket Banner">
 
-  <!-- Informações do Token -->
   <div class="info">
-    <h1>WHOMARS - A Cripto Nonsense Interplanetária</h1>
+    <h1>WHOMARS – A Cripto Nonsense Interplanetária</h1>
 
     <h2>Contrato:</h2>
     <p>0x0951BD6B6310175EdC9508F3A5A24Ee5</p>
@@ -69,4 +68,22 @@
 
     <h3>Descrição:</h3>
     <p>
-      WHOMARS
+      WHOMARS é a cripto que não quer brigar, só quer chegar primeiro a Marte com memes, paródias e geopolítica nonsense.
+      Porque levar a vida a sério... não leva a Júpiter!
+    </p>
+
+    <!-- Botão funcional -->
+    <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank">
+      <button class="button">COMPRAR WHM AGORA</button>
+    </a>
+  </div>
+
+  <!-- Imagem extra -->
+  <img class="banner" src="https://i.ibb.co/ZGrP2CY/quem-chega-primeiro.png" alt="Quem chega primeiro à Marte?">
+
+  <div class="footer">
+    © 2025 WHOMARS — To the memeverse!
+  </div>
+
+</body>
+</html>
