--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 </head>
 <body>
 
-  <!-- Banner e botão -->
-  <img class="banner" src="https://i.ibb.co/yWgdT60/whomars-banner-meme.png" alt="WHOMARS Banner">
+  <!-- NOVA imagem de banner -->
+  <img class="banner" src="https://i.ibb.co/HTk5szW/quem-chega-primeiro-whomars-full.png" alt="Quem chega primeiro a Marte?">
+
+  <!-- Botão de compra -->
   <div class="section">
     <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank" class="buy-button">
       COMPRAR WHM AGORA
@@ -112,24 +114,4 @@
   <div class="section">
     <h2>Corrida Espacial dos Memes</h2>
     <p>Os foguetes decolaram. Quem vai dominar Marte com um GIF?</p>
-    <div class="flags">
-      <img src="https://flagcdn.com/w320/ru.png" alt="Rússia">
-      <img src="https://flagcdn.com/w320/cn.png" alt="China">
-      <img src="https://flagcdn.com/w320/jp.png" alt="Japão">
-      <img src="https://flagcdn.com/w320/eu.png" alt="Europa">
-      <img src="https://flagcdn.com/w320/br.png" alt="Brasil">
-    </div>
-  </div>
-
-  <!-- Rodapé com redes -->
-  <div class="footer">
-    <div class="social-links">
-      <a href="https://facebook.com/whomars" target="_blank">Facebook</a> |
-      <a href="https://instagram.com/whomars_token" target="_blank">Instagram</a> |
-      <a href="https://kwai.com/@whomars" target="_blank">Kwai</a>
-    </div>
-    <p>© 2025 WHOMARS — Porque levar a vida a sério não leva a Júpiter.</p>
-  </div>
-
-</body>
-</html>
+    <div class="
