--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
 <body>
 
   <!-- NOVA imagem de banner -->
-  
-<img class="banner" src="banner-correto-whomars.png" alt="Quem chega primeiro a Marte?">
+  <img class="banner" src="banner-whomars-final.png" alt="Quem chega primeiro a Marte?">
   <!-- Botão de compra -->
   <div class="section">
     <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank" class="buy-button">
