--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WHOMARS Token</title>
+  <title>WHOMARS - Cripto Nonsense Interplanetária</title>
   <style>
     body {
       margin: 0;
@@ -26,8 +26,9 @@
     .banner {
       width: 100%;
       max-width: 800px;
-      margin: 30px auto 0;
+      margin: 30px auto 10px;
       border-radius: 12px;
+      box-shadow: 0 0 15px #00e6b8;
     }
 
     .buy-button {
@@ -48,32 +49,6 @@
       box-shadow: 0 0 15px #00e6b8;
     }
 
-    .flags {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .flags img {
-      width: 100px;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 0 8px #00b894;
-    }
-
-    .social-links {
-      margin-top: 30px;
-    }
-
-    .social-links a {
-      margin: 0 10px;
-      color: #00e6b8;
-      text-decoration: none;
-      font-size: 18px;
-    }
-
     .footer {
       background: #000;
       padding: 30px 10px;
@@ -81,13 +56,23 @@
       color: #aaa;
       margin-top: 50px;
     }
+
+    .social-links a {
+      color: #00e6b8;
+      margin: 0 10px;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
 
-  <!-- NOVA imagem de banner -->
-  <img class="banner" src="banner-whomars-funcional.png" alt="Quem chega primeiro a Marte?">
-  <!-- Botão de compra -->
+  <!-- Banner 1 -->
+  <img class="banner" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268-aafc-8009-af43-3c233ea751e6-message-i.png" alt="Banner WHOMARS 1">
+
+  <!-- Banner 2 -->
+  <img class="banner" src="https://i.ibb.co/nqcLn2Lm/file-00000000653c61f699992c277d083e7b-conversation-id-67fe96c4-ce40-8009-9623-2f8c1059ee2d-message-i.png" alt="Banner WHOMARS 2">
+
+  <!-- Botão -->
   <div class="section">
     <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank" class="buy-button">
       COMPRAR WHM AGORA
@@ -97,7 +82,7 @@
   <!-- Sobre -->
   <div class="section">
     <h1>O que é WHOMARS?</h1>
-    <p>Uma cripto com um propósito: levar memes ao espaço. WHOMARS é a criptomoeda interplanetária que une Brasil, China, Rússia, Japão e Europa em uma disputa nonsense para ver quem chega primeiro a Marte com um foguete meme!</p>
+    <p>Uma cripto nonsense, meme e interplanetária. WHOMARS é uma criptomoeda que une Brasil, China, Rússia, Japão e Europa em uma corrida maluca rumo a Marte com foguetes memes!</p>
   </div>
 
   <!-- Tokenomics -->
@@ -109,8 +94,15 @@
     <p><strong>Rede:</strong> BNB Smart Chain</p>
   </div>
 
-  <!-- Corrida espacial -->
-  <div class="section">
-    <h2>Corrida Espacial dos Memes</h2>
-    <p>Os foguetes decolaram. Quem vai dominar Marte com um GIF?</p>
-    <div class="
+  <!-- Rodapé -->
+  <div class="footer">
+    <div class="social-links">
+      <a href="https://facebook.com/whomars" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/whomars_token" target="_blank">Instagram</a> |
+      <a href="https://kwai.com/@whomars" target="_blank">Kwai</a>
+    </div>
+    <p>© 2025 WHOMARS — Porque levar a vida a sério não leva a Júpiter.</p>
+  </div>
+
+</body>
+</html>
