--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WHOMARS - Cripto Nonsense</title>
+  <title>WHOMARS - Cripto Nonsense Interplanetária</title>
   <style>
     body {
       margin: 0;
@@ -13,38 +13,8 @@
       text-align: center;
     }
 
-    .banner-wrapper {
-      position: relative;
-      display: inline-block;
-      width: 100%;
-      max-width: 800px;
-      margin-top: 20px;
-    }
-
-    .banner {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #00e6b8;
-    }
-
-    .buy-button {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #00b894;
-      color: white;
-      padding: 15px 30px;
-      font-size: 20px;
-      border-radius: 10px;
-      text-decoration: none;
-      box-shadow: 0 0 10px #00b894;
-      transition: 0.3s ease;
-    }
-
-    .buy-button:hover {
-      background-color: #00e6b8;
-      box-shadow: 0 0 15px #00e6b8;
+    h1, h2 {
+      color: #00e6b8;
     }
 
     .section {
@@ -53,55 +23,19 @@
       margin: auto;
     }
 
-    h1, h2 { color: #00e6b8; }
-
-    .footer {
-      background: #000;
-      padding: 30px 10px;
-      font-size: 14px;
-      color: #aaa;
-      margin-top: 50px;
+    .banner {
+      width: 100%;
+      max-width: 800px;
+      margin: 30px auto 10px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px #00e6b8;
     }
 
-    .social-links a {
-      color: #00e6b8;
-      margin: 0 10px;
+    .buy-button {
+      display: inline-block;
+      background-color: #00b894;
+      color: white;
+      padding: 15px 30px;
+      font-size: 20px;
+      border-radius: 10px;
       text-decoration: none;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Imagem com botão sobre ela -->
-  <div class="banner-wrapper">
-    <img class="banner" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268-aafc-8009-af43-3c233ea751e6-message-i.png" alt="Banner WHOMARS 1">
-    <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank" class="buy-button">COMPRAR WHM AGORA</a>
-  </div>
-
-  <!-- Seção explicativa -->
-  <div class="section">
-    <h1>O que é WHOMARS?</h1>
-    <p>Uma cripto nonsense, meme e interplanetária. WHOMARS é uma criptomoeda que une Brasil, China, Rússia, Japão e Europa em uma corrida maluca rumo a Marte com foguetes memes!</p>
-  </div>
-
-  <!-- Tokenomics -->
-  <div class="section">
-    <h2>Tokenomics</h2>
-    <p><strong>Nome:</strong> WHOMARS (WHM)</p>
-    <p><strong>Contrato:</strong> 0x0951BD6B6310175EdC9508F3A5A24Ee5</p>
-    <p><strong>Fornecimento total:</strong> 100.000.000.000 WHM</p>
-    <p><strong>Rede:</strong> BNB Smart Chain</p>
-  </div>
-
-  <!-- Rodapé -->
-  <div class="footer">
-    <div class="social-links">
-      <a href="https://facebook.com/whomars" target="_blank">Facebook</a> |
-      <a href="https://instagram.com/whomars_token" target="_blank">Instagram</a> |
-      <a href="https://kwai.com/@whomars" target="_blank">Kwai</a>
-    </div>
-    <p>© 2025 WHOMARS — Porque levar a vida a sério não leva a Júpiter.</p>
-  </div>
-
-</body>
-</html>
