--- a/index.html
+++ b/index.html
@@ -39,3 +39,70 @@
       font-size: 20px;
       border-radius: 10px;
       text-decoration: none;
+      box-shadow: 0 0 10px #00b894;
+      margin-top: 20px;
+      transition: 0.3s ease;
+    }
+
+    .buy-button:hover {
+      background-color: #00e6b8;
+      box-shadow: 0 0 15px #00e6b8;
+    }
+
+    .footer {
+      background: #000;
+      padding: 30px 10px;
+      font-size: 14px;
+      color: #aaa;
+      margin-top: 50px;
+    }
+
+    .social-links a {
+      color: #00e6b8;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Banner 1 -->
+  <img class="banner" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268-aafc-8009-af43-3c233ea751e6-message-i.png" alt="Banner WHOMARS 1">
+
+  <!-- Banner 2 -->
+  <img class="banner" src="https://i.ibb.co/nqcLn2Lm/file-00000000653c61f699992c277d083e7b-conversation-id-67fe96c4-ce40-8009-9623-2f8c1059ee2d-message-i.png" alt="Banner WHOMARS 2">
+
+  <!-- Botão -->
+  <div class="section">
+    <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank" class="buy-button">
+      COMPRAR WHM AGORA
+    </a>
+  </div>
+
+  <!-- Sobre -->
+  <div class="section">
+    <h1>O que é WHOMARS?</h1>
+    <p>Uma cripto nonsense, meme e interplanetária. WHOMARS é uma criptomoeda que une Brasil, China, Rússia, Japão e Europa em uma corrida maluca rumo a Marte com foguetes memes!</p>
+  </div>
+
+  <!-- Tokenomics -->
+  <div class="section">
+    <h2>Tokenomics</h2>
+    <p><strong>Nome:</strong> WHOMARS (WHM)</p>
+    <p><strong>Contrato:</strong> 0x0951BD6B6310175EdC9508F3A5A24Ee5</p>
+    <p><strong>Fornecimento total:</strong> 100.000.000.000 WHM</p>
+    <p><strong>Rede:</strong> BNB Smart Chain</p>
+  </div>
+
+  <!-- Rodapé -->
+  <div class="footer">
+    <div class="social-links">
+      <a href="https://facebook.com/whomars" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/whomars_token" target="_blank">Instagram</a> |
+      <a href="https://kwai.com/@whomars" target="_blank">Kwai</a>
+    </div>
+    <p>© 2025 WHOMARS — Porque levar a vida a sério não leva a Júpiter.</p>
+  </div>
+
+</body>
+</html>
