--- a/index.html
+++ b/index.html
@@ -1,56 +1,108 @@
- <!DOCTYPE html><html lang="pt-br">
+ <!DOCTYPE html>
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WHOMARS - Cripto Nonsense</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WHOMARS - Cripto Nonsense Interplanetária</title>
   <style>
-    body { background: #111; color: #fff; font-family: Arial; margin: 0; text-align: center; }
-    .section { padding: 40px 20px; max-width: 900px; margin: auto; }
-    h1, h2 { color: #00e6b8; }
-    .banner-img { width: 100%; max-width: 800px; border-radius: 12px; box-shadow: 0 0 15px #00e6b8; margin-top: 20px; }
-    .button { background: #00b894; color: #fff; padding: 15px 30px; text-decoration: none; border-radius: 10px; font-size: 20px; box-shadow: 0 0 10px #00b894; display: inline-block; margin-top: 20px; transition: 0.3s ease; }
-    .button:hover { background: #00e6b8; box-shadow: 0 0 15px #00e6b8; }
-    .roadmap, .tokenomics, .team { margin-top: 50px; }
-    .roadmap ul, .tokenomics ul { list-style: none; padding: 0; }
-    .roadmap li, .tokenomics li { margin: 15px 0; }
-    .avatar { width: 120px; border-radius: 50%; margin: 10px; }
-    .footer { background: #000; padding: 30px 10px; font-size: 14px; color: #aaa; margin-top: 50px; }
-    .social-links a { color: #00e6b8; margin: 0 10px; text-decoration: none; }
+    body {
+      margin: 0;
+      background-color: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+
+    h1, h2 {
+      color: #00e6b8;
+    }
+
+    .section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .banner {
+      width: 100%;
+      max-width: 800px;
+      margin: 30px auto 10px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px #00e6b8;
+    }
+
+    .buy-button {
+      display: inline-block;
+      background-color: #00b894;
+      color: white;
+      padding: 15px 30px;
+      font-size: 20px;
+      border-radius: 10px;
+      text-decoration: none;
+      box-shadow: 0 0 10px #00b894;
+      margin-top: 20px;
+      transition: 0.3s ease;
+    }
+
+    .buy-button:hover {
+      background-color: #00e6b8;
+      box-shadow: 0 0 15px #00e6b8;
+    }
+
+    .footer {
+      background: #000;
+      padding: 30px 10px;
+      font-size: 14px;
+      color: #aaa;
+      margin-top: 50px;
+    }
+
+    .social-links a {
+      color: #00e6b8;
+      margin: 0 10px;
+      text-decoration: none;
+    }
   </style>
 </head>
-<body>  <!-- Banner da Pré-venda -->  <div class="section">
-    <h1>PRÉ-VENDA WHOMARS</h1>
-    <img class="banner-img" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268-aafc-8009-af43-3c233ea751e6-message-i.png" alt="Pré-venda WHOMARS">
-    <p>A cripto nonsense que vai conquistar Marte!</p>
-    <a href="https://www.pinksale.finance/" target="_blank" class="button">COMPRAR NA PINKSALE</a>
-  </div>  <!-- Roadmap -->  <div class="section roadmap">
-    <h2>Roteiro da Missão</h2>
-    <ul>
-      <li>Fase 1 - Criação do Token e Website</li>
-      <li>Fase 2 - PRÉ-VENDA via Pinksale</li>
-      <li>Fase 3 - Lançamento na PancakeSwap</li>
-      <li>Fase 4 - Listagem no CoinMarketCap e CoinGecko</li>
-      <li>Fase 5 - Marketing com vídeos e memes intergalácticos</li>
-    </ul>
-  </div>  <!-- Tokenomics -->  <div class="section tokenomics">
-    <h2>Tokenomics Intergaláctica</h2>
-    <ul>
-      <li>60% - Pré-venda</li>
-      <li>20% - Liquidez</li>
-      <li>10% - Marketing</li>
-      <li>10% - Reserva Meme Galáctica</li>
-    </ul>
-  </div>  <!-- Equipe MemeGaláctica -->  <div class="section team">
-    <h2>Equipe MemeGaláctica</h2>
-    <img class="avatar" src="https://i.ibb.co/3cg5C3r/meme-captain.png" alt="Capitão WHM">
-    <img class="avatar" src="https://i.ibb.co/VScPbM5/engineer.png" alt="Engenheiro Russo">
-    <img class="avatar" src="https://i.ibb.co/y5MJD7X/japanese-pilot.png" alt="Piloto Japonês">
-  </div>  <!-- Rodapé -->  <div class="footer">
+<body>
+
+  <!-- Banner 1 -->
+  <img class="banner" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268-aafc-8009-af43-3c233ea751e6-message-i.png" alt="Banner WHOMARS 1">
+
+  <!-- Banner 2 -->
+  <img class="banner" src="https://i.ibb.co/nqcLn2Lm/file-00000000653c61f699992c277d083e7b-conversation-id-67fe96c4-ce40-8009-9623-2f8c1059ee2d-message-i.png" alt="Banner WHOMARS 2">
+
+  <!-- Botão -->
+  <div class="section">
+    <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank" class="buy-button">
+      COMPRAR WHM AGORA
+    </a>
+  </div>
+
+  <!-- Sobre -->
+  <div class="section">
+    <h1>O que é WHOMARS?</h1>
+    <p>Uma cripto nonsense, meme e interplanetária. WHOMARS é uma criptomoeda que une Brasil, China, Rússia, Japão e Europa em uma corrida maluca rumo a Marte com foguetes memes!</p>
+  </div>
+
+  <!-- Tokenomics -->
+  <div class="section">
+    <h2>Tokenomics</h2>
+    <p><strong>Nome:</strong> WHOMARS (WHM)</p>
+    <p><strong>Contrato:</strong> 0x0951BD6B6310175EdC9508F3A5A24Ee5</p>
+    <p><strong>Fornecimento total:</strong> 100.000.000.000 WHM</p>
+    <p><strong>Rede:</strong> BNB Smart Chain</p>
+  </div>
+
+  <!-- Rodapé -->
+  <div class="footer">
     <div class="social-links">
       <a href="https://facebook.com/whomars" target="_blank">Facebook</a> |
       <a href="https://instagram.com/whomars_token" target="_blank">Instagram</a> |
       <a href="https://kwai.com/@whomars" target="_blank">Kwai</a>
     </div>
     <p>© 2025 WHOMARS — Porque levar a vida a sério não leva a Júpiter.</p>
-  </div></body>
+  </div>
+
+</body>
 </html>
