--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     }, 1000);
   </script>  <!-- Sobre -->  <div class="section">
     <h1>O que é WHOMARS?</h1>
-    <p>Uma cripto nonsense, meme e interplanetária. WHOMARS é uma criptomoeda que une Brasil, China, Rússia, Japão e Europa em uma corrida maluca rumo a Marte com foguetes memes!</p>
+<p>WHOMARS é o cripto meme mundial que une (e zoa) as maiores potências em uma corrida interplanetária rumo a Marte. Brasil, China, Rússia, Japão, Europa e muito mais — todos disputando com foguetes e zoeira quem chega primeiro no planeta vermelho.</p>
   </div>  <!-- Por que investir -->  <div class="section why-invest">
     <h2>Por que investir em WHOMARS?</h2>
     <ul>
